--- a/69.css
+++ b/69.css
@@ -747,11 +747,12 @@ header .navigation .navigation_menu a:hover:before{
 }
 .ourmedia{
 	width: 100%;
-	height: 80vh;
+	height: auto;
 	display: flex;
 	justify-content: center;
 	background: rgba(0, 0, 0, 0.8);
 	z-index: 3;
+	margin-bottom: 1%;
 }
 .media{
 	display: flex;
@@ -784,7 +785,7 @@ header .navigation .navigation_menu a:hover:before{
 }
 @media (max-width: 427px){
 	.ourmedia{
-		height: 70vh;
+		height: auto;
 	}
 }
 
@@ -799,7 +800,7 @@ header .navigation .navigation_menu a:hover:before{
 .ventures69{
 	z-index: 3;
 	width: 100%;
-	height: 50vh;
+	height: auto;
 	display: flex;
 	justify-content: center;
 	background: rgba(0, 0, 0, 0.8);
@@ -874,7 +875,7 @@ header .navigation .navigation_menu a:hover:before{
 
 @media (max-width: 810px){
 	.ventures69{
-		height: 90vh;
+		height: auto;
 	}
 	.gridmenu{
 		display: flex;
