--- a/69.css
+++ b/69.css
@@ -752,7 +752,7 @@ header .navigation .navigation_menu a:hover:before{
 	justify-content: center;
 	background: rgba(0, 0, 0, 0.8);
 	z-index: 3;
-	margin-bottom: 1%;
+	padding-bottom: 3%;
 }
 .media{
 	display: flex;
