--- a/69.css
+++ b/69.css
@@ -6,7 +6,7 @@
 	padding:0;
 }
 html{
-	background: #FFFACA;
+	background: black;
 	scroll-behavior: smooth;
 	font-family: 'Bai Jamjuree', sans-serif;
 	color: white;
@@ -181,17 +181,14 @@ header .navigation .navigation_menu a:hover:before{
 }
 .layout{
 	width: 100%;
-	min-height: 500vh;
 }
 .layout .mainlayout{
-	min-height: 500vh;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .content{
-	min-height: 500vh;
 	position: absolute!important;
     top: 0;
     left: 0;
@@ -376,25 +373,23 @@ header .navigation .navigation_menu a:hover:before{
 }
 
 .aboutus{
-	position: relative;
 	width: 90%;
-	height: 100vh;
+	height: fit-content;
+	padding: 5% 0;
 	z-index: 2;
-    	display: flex;
-    	justify-content: center;
-    	padding: 80px 0;
-   	 margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;	
 }
 .mainabout{
-	position: absolute;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	color: white;
 	font-size: 40px;
 	width: 100%;
-	height: 10%;
-	border-radius: 30px 30px 10px 10px;
+	height: 5%;
+	border-radius: 30px 30px 0px 0px;
 	background: rgb(191, 181, 127.75);
 	z-index: 3;
 	border: 2px solid #ffd700;
@@ -402,16 +397,14 @@ header .navigation .navigation_menu a:hover:before{
 }
 .aboutcon{
 	z-index: 2;
-	position: absolute;
-	width: 100%;
-	height: 90vh;
-	border-radius: 30px;
-	background: ;
-	display: grid;
-	grid-template-columns: 40% 60%;
-	border: 2px solid #ffd700;
+    width: 100%;
+    height: fit-content;
+    border-radius: 0 0 30px 30px;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    border: 2px solid #ffd700;
 }
-.aboutcon:before{
+/*.aboutcon:before{
 	content: '';
 	position: absolute;
     top: 0;
@@ -420,15 +413,15 @@ header .navigation .navigation_menu a:hover:before{
     bottom: 0;
     border-radius: 30px;
     background: rgba(0, 0, 0, 0.5);
-}
+}*/
 .introabout{
 	width: 100%;
-	height: 100%;
-	background: #F6E172;;
-	z-index: 3;
-	border-radius: 30px 0 0 30px;
-	border-right: 2px solid #ffd700;
-	overflow: hidden;
+    height: 100%;
+    background: #F6E172;
+    z-index: 3;
+    border-radius: 0px 0 0 28px;
+    border-right: 2px solid #ffd700;
+    overflow: hidden;
 }
 
 .introimg{
@@ -455,31 +448,31 @@ header .navigation .navigation_menu a:hover:before{
         -1px 1px 1px #000;
 }
 .introcontent{
-	z-index: 5;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 90%;
-	height: 100%;
-	padding-top: 80px;
-	margin-left: 50px;
-	color: white;
-	font-size: 18px;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* height: 100%; */
+    padding: 5%;
+    /* margin-left: 50px; */
+    color: white;
+    font-size: 18px;
 }
 .cspan{
 	font-weight: bold; font-size: 30px; margin-top: 2%; color: #F6E172;
 }
 @media (max-width: 950px){
 	.aboutus{
-		height: 150vh;
+		height: fit-content;
 		display: flex;
 		justify-content: center;
 	}
 	.aboutcon{
-		height: 118vh;
-		display: flex;
-		flex-direction: column;
+		height: fit-content;
+        display: flex;
+        flex-direction: column;
 	}
 	.introabout{
 		display: none;
@@ -505,10 +498,9 @@ header .navigation .navigation_menu a:hover:before{
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: 100vh;
-	padding: 80px 50px;
+	min-height: fit-content;
+    padding: 5% 3%;
 	z-index: 2;
-	background-image: url('yellowbg.png');
 	background-size: cover; 
     background-position: center; 
 	left: 0;
@@ -582,7 +574,7 @@ header .navigation .navigation_menu a:hover:before{
 @media (max-width: 1000px){
 	.services{
 		display: flex;
-		justify-content: center;
+		justify-content: flex-start;
 	}
 	.services:before{
 		width: 100%;
@@ -595,7 +587,7 @@ header .navigation .navigation_menu a:hover:before{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 4%;
     gap: 30px;
  	}
@@ -634,36 +626,39 @@ header .navigation .navigation_menu a:hover:before{
 	}
 }
 .ourprofolio{
+	padding: 10%;
 	display: flex;
 	justify-content: center;
     z-index: 3;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background: rgba(0, 0, 0, 0.1);
 }
 .profolio{
-	margin-top: 80px;
 	display: flex;
 	justify-content: center;
 	width: 90%;
-	height: 88vh;
-	background-image: url('hexligan1.png');
+	height: fit-content;
+	padding: 3%;
+	/*background-image: url('hexligan1.png');*/
 	background-size: cover; 
     background-position: center; 
     border-radius: 30px;
     position: relative;
 }
 .profolio:before{
-	content: '';
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 88vh;
-	border-radius: 30px;
-	background: rgba(255, 255, 255, 0.5);
+content: '';
+    position: absolute;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    /* bottom: 0; */
+    /* left: 0; */
+    width: 100%;
+    padding: 3%;
+    height: -webkit-fill-available;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.5);;
 }
 .promain{
 	display: grid;
@@ -748,11 +743,10 @@ header .navigation .navigation_menu a:hover:before{
 }
 .ourmedia{
 	width: 100%;
-	height: 100vh;
+	height: fit-content;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(0, 0, 0, 0.8);
 	z-index: 3;
 	padding-bottom: 3%;
 }
@@ -762,7 +756,6 @@ header .navigation .navigation_menu a:hover:before{
 	align-items: center;
 }
 .media h{
-	margin-top: 80px;
 	z-index: 5;
 	display: flex;
 	font-size: 50px;
@@ -888,7 +881,6 @@ header .navigation .navigation_menu a:hover:before{
 	height: auto;
 	display: flex;
 	justify-content: center;
-	background: rgba(0, 0, 0, 0.8);
 	align-items: flex-end;
 	padding-bottom: 25px;
 }	
@@ -988,4 +980,104 @@ header .navigation .navigation_menu a:hover:before{
 	color: white;
 	height: auto;
 	font-size: 16px;
-}ß
+}
+
+.charity{
+	width: 100%;
+	overflow: hidden;
+	padding: 20px;
+	display: flex;
+	justify-content: center;
+}
+.bg-charity{
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
+	z-index: 1;
+	position: relative;
+    display: block;
+   	width: 95%;
+   	height: fit-content;
+    padding: 0 0 2% 0;
+}
+
+.table-title {
+	text-align: center;
+    margin: 20px 0;
+    font-size: 24px;
+    color: white;
+    font-family: Arial, sans-serif;
+}
+.no-grid-table {
+    border-radius: 11px;
+    border-collapse: collapse;
+    width: 95%;
+    margin: auto;
+    }
+.no-grid-table th, .no-grid-table td {
+    text-align: left;
+    padding: 8px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #dee2e6;
+}
+.no-grid-table th {
+    font-family: Arial, sans-serif;
+    background-color: #066a9c;
+}
+.no-grid-table tr:hover{
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.truncate {
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+	white-space: nowrap;
+}
+.truncate a:hover {
+    display: block; 
+    background-color: rgba(255, 193, 7, 0.3);
+    border: 1px dashed #ffc107;
+    border-radius: 11px;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+.align {}
+.pagination {
+    text-align: center;
+    margin-top: 20px;
+    display: block;
+}
+.pagination span {
+    color: #6c757d;
+    border: 1px solid #ced4da;
+    background-color: #e9ecef;
+    border-radius: 4px;
+    padding: 4px;
+    font-size: 14px;
+}
+.pagination button {
+   	color: #0784c3;
+    border: 1px solid #ced4da;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 4px;
+}
+.pagination button:hover{
+    color: #fff;
+    background-color: #066a9c;
+    border: 1px solid #066a9c;
+}
+.tx-link {
+    color: #0dcaf0;
+    text-decoration: none;
+    display: block;
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+thead, tbody{
+    font-size: 15px;
+        }
+
+.cetificated{
+	z-index: 3;
+}
