--- a/69.css
+++ b/69.css
@@ -499,7 +499,7 @@ header .navigation .navigation_menu a:hover:before{
 	flex-direction: column;
 	width: 100%;
 	min-height: fit-content;
-    padding: 5% 3%;
+    padding: 5% 6%;
 	z-index: 2;
 	background-size: cover; 
     background-position: center; 
@@ -552,10 +552,10 @@ header .navigation .navigation_menu a:hover:before{
 	justify-content: center;	
 	width: 80%;
 	height: 300px;
-	background: linear-gradient(45deg, rgba(255, 229, 127, 1), rgba(255, 175, 0, 1));
+	background: linear-gradient(45deg, rgba(255, 229, 127, .7), rgba(255, 175, 0, 0.6));
 	z-index: 3;
-	border-radius: 20px 100px 20px 20px;
-	border: 2px solid rgba(0, 0, 0, 0.8);
+	border-radius: 20px 80px 20px 20px;
+    border: 2px solid rgba(255, 255, 255, 0.7);
 	box-sizing: border-box;
 }
 .ser1 h, .ser1 p{
@@ -568,7 +568,7 @@ header .navigation .navigation_menu a:hover:before{
 }
 .ser1 p{
 	margin-top: 3%;
-	color: rgba(0, 0, 0, 0.8);
+	color: #fff;
 }
 
 @media (max-width: 1000px){
@@ -584,17 +584,18 @@ header .navigation .navigation_menu a:hover:before{
 		justify-content: center;
 	}
 	.perser {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 4%;
-    gap: 30px;
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    align-items: flex-start;
+	    margin-top: 4%;
+	    gap: 30px;
  	}
  	.ser1{
- 		border-radius: 20px 20px 20px 20px;
-    	border: 1px solid rgba(0, 0, 0, 0.8);
- 	}
+ 		width: 100%;
+	 	border-radius: 20px 20px 20px 20px;
+	    border: 2px solid rgba(255, 255, 255, 0.7);
+	}
 }
 @media (max-width: 515px){
 	.ourservices{
@@ -615,6 +616,7 @@ header .navigation .navigation_menu a:hover:before{
 		height: 100%;
 	}
 	.ser1{
+		width: 100%;
 		height: auto;
     	padding: 20px;
 	}
